<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cloud Storage</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="files">Files</string>
    <string name="no_files">No files uploaded yet</string>
    <string name="uploading">Uploading...</string>
    <string name="downloading">Downloading...</string>
    <string name="deleting">Deleting...</string>
    <string name="login_required">Please login to continue</string>
    <string name="invalid_credentials">Invalid username or password</string>
    <string name="registration_success">Registration successful! Please login.</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="email_required">Email is required</string>
    <string name="confirm_delete">Are you sure you want to delete this file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_occurred">An error occurred</string>
    <string name="server_url">Server URL</string>
    <string name="default_server_url">http://10.0.2.2:5000</string>
    <string name="connect">Connect</string>
    <string name="file_size_mb">%.2f MB</string>
    <string name="select_file">Select File</string>
    <string name="password_requirements">Password must be at least 8 characters with uppercase, lowercase, number and special character</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="already_have_account">Already have an account? Login</string>
</resources>